<resources>
    <string name="app_name">ASLRApp</string>
    <string name="welcome_to_the_aslr">Welcome to the ASLR!</string>
    <string name="create_new_user">Create New User</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="create_a_new_user">Create a New User</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sample_ai">Sample AI</string>
    <string name="asl_letter">ASL Letter</string>
    <string name="b">B</string>
    <string name="i">I</string>
    <string name="l">L</string>
    <string name="o">O</string>
    <string name="y">Y</string>
    <string name="_1">1</string>
    <string name="non_match_passwords_error">Password and Confirmation Password do not match</string>
    <string name="success_new_user">Successfully Created New User</string>
    <string name="hash_error">Error Hashing Password</string>
    <string name="access_denied">Access Denied</string>
    <string name="train_ai">Train AI</string>
    <string name="developer">Developer</string>
    <string name="fail_create_user">Failed to create new user</string>
</resources>
